[project]
authors = [{name = "Tyler Erickson", email = "tyler@vorgeo.com"}]
dependencies = []
name = "tutorial-template"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
# tutorial_template = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
jupyter = ">=1.1.1,<2"
matplotlib = ">=3.10.1,<4"
plotly = ">=6.0.1,<7"
python = "==3.11"
