[project]
authors = [ # Replace with the authors' names and emails
  {name = "Jane Smith", email = "Jane@example.com"},
  {name = "John Smith ", email = "john@example.com"},
]
dependencies = []
name = "tutorial-template"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

# Pixi configuration
# See: https://pixi.sh/latest/reference/pixi_manifest/
[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]

[tool.pixi.tasks]

[tool.pixi.dependencies]  # Specify conda package dependencies required by the tutorial
python = "==3.11"
jupyter = ">=1.1.1,<2"
matplotlib = ">=3.10.1,<4"
plotly = ">=6.0.1,<7"
